--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "styled-components": "^5.1.1",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
