--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,24 @@
 {
-  // Set the default
-  "editor.formatOnSave": false,
-  // Enable per-language
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "eslint.format.enable": true,
+  "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
-  }
+  },
+  "files.insertFinalNewline": true,
+  "eslint.workingDirectories": [
+    {
+      "directory": "./src",
+      "changeProcessCWD": true
+    }
+  ]
 }
