--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,24 @@
 {
   "compilerOptions": {
-    "rootDir": "src",
-
     "target": "es6",
-
     "lib": ["dom", "dom.iterable", "esnext"],
-
-    "moduleResolution": "node",
-
-    "module": "commonjs",
-
-    "types": ["node", "@types/jest"],
-    "allowUmdGlobalAccess": true,
-    "resolveJsonModule": true,
     "allowJs": true,
-
+    "skipLibCheck": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
 
     "strict": true,
-    "noImplicitAny": true,
-    "skipLibCheck": true,
-    "jsx": "react-jsx"
+    "forceConsistentCasingInFileNames": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    "rootDir": "src",
+    "types": ["node", "@types/jest"],
+    "allowUmdGlobalAccess": true,
+    "noImplicitAny": true
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
