--- a/package.json
+++ b/package.json
@@ -2,41 +2,48 @@
   "name": "ui-code-assessment",
   "version": "1.0.0",
   "author": "Nath Paiva",
-  "main": "src/index.js",
   "scripts": {
-    "start:server": "node ./src/server/server.js",
+    "start:server": "ts-node ./src/server/index.ts",
     "start:client": "react-scripts start",
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --collectCoverage=true --watchAll",
+    "test:ci": "react-scripts test --collectCoverage=true",
     "start": "concurrently npm:start:client npm:start:server",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "lint": "eslint src/**/*.ts src/**/*.tsx"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^10.4.3",
+    "@testing-library/react": "^14.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest-styled-components": "^7.0.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "styled-components": "^5.1.1",
-    "typescript": "^3.7.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.6",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/react": "^16.9.11",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "concurrently": "^5.0.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "concurrently": "^8.2.0",
+    "eslint": "^8.46.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.20.0",
-    "prettier": "^2.0.5",
-    "react-scripts": "^3.2.0"
+    "prettier": "^3.0.0",
+    "react-scripts": "^5.0.1",
+    "ts-node": "^10.9.1"
   },
   "browserslist": {
     "production": [
