--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "ui-code-assessment",
+  "name": "quiz",
   "version": "1.0.0",
   "author": "Nath Paiva",
+  "license": "MIT",
   "scripts": {
+    "build": "tsc && vite build",
+    "serve": "vite preview",
+    "test:coverage": "vitest --coverage",
+    "test": "vitest",
+    "test:ui": "vitest --ui --watch --coverage",
+    "test:ci": "vitest --coverage --run",
+    "start": "concurrently yarn:start:client yarn:start:server",
     "start:server": "ts-node ./src/server/index.ts",
-    "start:client": "react-scripts start",
-    "test": "react-scripts test",
-    "test:coverage": "react-scripts test --collectCoverage=true --watchAll",
-    "test:ci": "react-scripts test --collectCoverage=true",
-    "start": "concurrently npm:start:client npm:start:server",
-    "build": "react-scripts build",
-    "lint": "eslint src/**/*.ts src/**/*.tsx"
+    "start:client": "vite",
+    "lint": "eslint \"*/**/*.{ts,tsx}\"",
+    "format": "eslint \"*/**/*.{ts,tsx}\" --fix"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.0",
@@ -24,26 +28,38 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@nathpaiva/eslint-config-react": "^1.0.9",
+    "@nathpaiva/prettier-config": "^1.0.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "@vitejs/plugin-react": "^4.0.4",
+    "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/ui": "^0.34.1",
     "concurrently": "^8.2.0",
-    "eslint": "^8.46.0",
+    "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-import-helpers": "^1.3.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.20.0",
-    "prettier": "^3.0.0",
-    "react-scripts": "^5.0.1",
-    "ts-node": "^10.9.1"
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^22.1.0",
+    "prettier": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "vite": "^4.4.9",
+    "vite-plugin-checker": "^0.6.1",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.34.1"
   },
   "browserslist": {
     "production": [
