--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
-    "rootDir": "src",
-    "types": ["node", "@types/jest"],
+    "types": ["node", "vitest/globals"],
     "allowUmdGlobalAccess": true,
     "noImplicitAny": true
   },
-  "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "include": ["vite.config.ts", ".eslintrc.cjs", "src", "vitest.setup.ts"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
