--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start": "concurrently yarn:start:client yarn:start:server",
     "start:server": "ts-node ./src/server/index.ts",
     "start:client": "vite",
-    "lint": "eslint \"src/**/**/*.{ts,tsx}\"",
-    "format": "eslint \"*/**/*.{ts,tsx}\" --fix"
+    "lint": "tsc --project tsconfig.json --noEmit && eslint src --ext .js,.jsx,.ts,.tsx",
+    "format": "eslint src --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.0",
@@ -28,32 +28,18 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@nathpaiva/eslint-config-react": "^1.0.9",
+    "@nathpaiva/eslint-config-react": "^1.0.12",
     "@nathpaiva/prettier-config": "^1.0.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
     "@vitejs/plugin-react": "^4.0.4",
     "@vitest/coverage-v8": "^0.34.1",
     "@vitest/ui": "^0.34.1",
     "concurrently": "^8.2.0",
-    "eslint": "^8.47.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-import-helpers": "^1.3.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^22.1.0",
-    "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
     "vite": "^4.4.9",
     "vite-plugin-checker": "^0.6.1",
